--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,5 @@
 
     <string name="menu_home">カレンダー</string>
     <string name="menu_gallery">対象予定</string>
-    <string name="menu_slideshow">対象予定以外の日</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="menu_other_setting">対象予定以外の日</string>
 </resources>
