--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -8,6 +8,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">calendar</string>
-    <string name="menu_gallery">Target Plan</string>
+    <string name="menu_gallery">Google event</string>
+    <string name="menu_target_setting">Target plans</string>
     <string name="menu_other_setting">Other plans</string>
 </resources>
