--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">カレンダー</string>
-    <string name="menu_gallery">対象予定</string>
+    <string name="menu_gallery">Googleカレンダーの登録状況</string>
+    <string name="menu_target_setting">対象予定</string>
     <string name="menu_other_setting">対象予定以外の日</string>
 </resources>
