--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -7,6 +7,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
+    <string name="action_quit">Quit</string>
     <string name="menu_home">calendar</string>
     <string name="menu_gallery">Google event</string>
     <string name="menu_target_setting">Target plans</string>
