--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,12 @@
     <string name="pref_set_default">規定値に戻す</string>
     <string name="pref_tDates">対象日リスト</string>
 
-    </resources>
+    <string name="sunday_background">#FFFDE7E7</string>
+    <string name="sunday_text_color">#FFFF0000</string>
+    <string name="satuday_background">#FFEDEDFF</string>
+    <string name="satuday_text_color">#FF0000FF</string>
+    <string name="default_background">#FFFFFFFF</string>
+    <string name="default_text_color">#FF000000</string>
+    <string name="colorPrimary">#FF3700B3</string>
+
+</resources>
