--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,6 @@
     <string name="comm_friday">金</string>
     <string name="comm_saturday">土</string>
     <string name="set_alarm_sound">アラーム音</string>
+    <string name="set_sequential_updates">逐次更新</string>
 
 </resources>
